Add list-bullet block

--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -8,6 +8,8 @@ block mixins
   include ../../blocks/button/button.pug
   include ../../blocks/button-like/button-like.pug
 
+  include ../../blocks/list-bullet/list-bullet.pug
+
 doctype html
 html(lang="en")
 
