--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -87,3 +87,14 @@ block content
             labelText: "Помощник для инвалидов",
             labelDescription: "На 1 этаже вас встретит специалист  и проводит до номера."
           })
+
+    .form-elements__column
+      .form-elements__item
+        h3.form-elements__title Bullet List
+        +list-bullet({
+          listItems: [
+            "Нельзя с питомцами",
+            "Без вечеринок и мероприятий",
+            "Время прибытия — после 13:00, а выезд до 12:00"
+          ]
+        })
