--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -16,3 +16,5 @@
 @import '../blocks/input-toggle/input-toggle';
 @import '../blocks/button/button';
 @import '../blocks/button-like/button-like';
+
+@import '../blocks/list-bullet/list-bullet';
