--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -9,6 +9,7 @@ block mixins
   include ../../blocks/button-like/button-like.pug
 
   include ../../blocks/list-bullet/list-bullet.pug
+  include ../../blocks/list-checkbox/list-checkbox.pug
 
 doctype html
 html(lang="en")
