--- a/source/pages/ui-kit/form-elements.scss
+++ b/source/pages/ui-kit/form-elements.scss
@@ -35,11 +35,10 @@
     margin-bottom: 20px;
   }
 
-  &__checkbox {
+  &__checkbox-list {
     width: 222px;
-    margin-bottom: 10px;
 
-    &_rich {
+    &_wide {
       width: 260px;
     }
   }
