--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -18,3 +18,4 @@
 @import '../blocks/button-like/button-like';
 
 @import '../blocks/list-bullet/list-bullet';
+@import '../blocks/list-checkbox/list-checkbox';
