--- a/source/blocks/input-field/input-field.pug
+++ b/source/blocks/input-field/input-field.pug
@@ -1,22 +1,27 @@
 mixin input-field({inpType="text", withExpand=false, inpStyle, labelText})
-  - attributes.type = inpType
-  - attributes.class = ["input-field"]
-  - let iconClass = ["material-icons", "input-field__expand"]
+  -
+    const blockName = "input-field";
+    const wrapperClass = [blockName];
+    const iconClass = ["material-icons", `${blockName}__expand`];
+    attributes.type = inpType;
+    attributes.class = [`${blockName}__field`];
 
   case inpType
     when "email"
       - attributes.placeholder = "Email"
+      - attributes.name = "email"
     when "password"
       - attributes.placeholder = "Пароль"
+      - attributes.name = "password"
     default
       - attributes.type = "text"
 
-  if (/dark/g.test(inpStyle))
-    - iconClass.push("input-field__expand_dark")
+  if (/dark/gi.test(inpStyle))
+    - iconClass.push(`${blockName}__expand_dark`)
 
-  .input-field__wrapper
+  div(class=wrapperClass)
     if (labelText)
-      label.input-field__label #{labelText}
+      label(class=`${blockName}__label`) #{labelText}
     input&attributes(attributes)
     if (withExpand)
       i(class=iconClass) expand_more
