--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -47,7 +47,7 @@ block content
         .form-elements__like-button
           +button-like({likeCount: 2})
         .form-elements__like-button
-          +button-like({likeCount: 12, isActive: true})
+          +button-like({likeCount: 12, active: true})
 
     .form-elements__column
       .form-elements__item
