--- a/source/blocks/input-field/input-field.scss
+++ b/source/blocks/input-field/input-field.scss
@@ -1,48 +1,49 @@
 .input-field {
-  width: 100%;
-  height: 44px;
-  padding: 0 1rem;
-  background: $color_back;
-  border: 1px solid $color_main-25;
-  border-radius: 4px;
-  font-family: $font-family_body;
-  font-size: $font-size_body;
-  color: $color_main-75;
-  outline: none;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  max-width: 320px;
+  min-width: 150px;
 
-  &::placeholder {
-    color: $color_main-25;
-    opacity: 1;
-  }
+  &__field {
+    width: 100%;
+    height: 3.14rem;
+    padding: 0 1rem;
+    background: $color_back;
+    border: 1px solid $color_main-25;
+    border-radius: 4px;
+    font-family: $font-family_body;
+    font-size: $font-size_body;
+    color: $color_main-75;
+    outline: none;
 
-  &:focus,
-  &:hover {
-    border-color: $color_main-50;
-  }
+    &::placeholder {
+      color: $color_main-25;
+      opacity: 1;
+    }
 
-  &__wrapper {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    max-width: 320px;
-    min-width: 150px;
+    &:focus,
+    &:hover {
+      border-color: $color_main-50;
+    }
   }
 
   &__label {
     display: block;
-    text-transform: uppercase;
+    margin-bottom: 5px;
     font-family: $font-family_h3;
     font-size: $font-size_h3;
     font-weight: bold;
+    text-transform: uppercase;
     color: $color_main;
   }
 
   &__expand {
     position: absolute;
     right: 0.5rem;
-    bottom: 10px;
+    bottom: 0.71rem;
     color: $color_main-50;
     user-select: none;
 
