--- a/source/blocks/input-toggle/input-toggle.scss
+++ b/source/blocks/input-toggle/input-toggle.scss
@@ -1,70 +1,68 @@
 .input-toggle {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  width: 40px;
-  height: 20px;
-  padding: 4px;
-  background: $color_back;
-  border: 1px solid $color_main-25;
-  border-radius: 10px;
+  width: max-content;
+  min-height: 20px;
+  padding-left: 40px + 10px;
+  font-family: $font-family_body;
+  font-size: $font-size_body;
+  line-height: 20px;
+  color: $color_main-75;
+  cursor: pointer;
 
-  &__checkmark {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background: $color_main-25;
+  &:hover {
+    .input-toggle__box {
+      border-color: $color_main-50;
+    }
   }
 
-  &__wrapper {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: max-content;
-    min-height: 20px;
-    padding-left: 40px + 10px;
-    font-family: $font-family_body;
-    font-size: $font-size_body;
-    line-height: 20px;
-    color: $color_main-75;
-    cursor: pointer;
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    opacity: 0;
 
-    &:hover {
-      .input-toggle {
+    &:focus {
+      ~ .input-toggle__box {
         border-color: $color_main-50;
       }
     }
 
-    input {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 0;
-      opacity: 0;
+    &:checked {
+      ~ .input-toggle__box {
+        border-color: $color_prim;
+        padding-left: 22px;
 
-      &:focus {
-        ~ .input-toggle {
-          border-color: $color_main-50;
+        .input-toggle__mark {
+          background: $color-grad_prim;
         }
       }
-
-      &:checked {
-        ~ .input-toggle {
-          border-color: $color_prim;
-          justify-content: flex-end;
-
-          .input-toggle__checkmark {
-            background: $color-grad_prim;
-          }
-        }
-      }
-
     }
-
   }
 
+  &__box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 40px;
+    height: 20px;
+    padding: 4px;
+    background: $color_back;
+    border: 1px solid $color_main-25;
+    border-radius: 10px;
+    transition: padding 0.3s ease-in-out;
+  }
+
+  &__mark {
+    min-width: 12px;
+    min-height: 12px;
+    border-radius: 50%;
+    background: $color_main-25;
+  }
 }
