Add rating block

--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -7,6 +7,7 @@ block mixins
   include ../../blocks/input-toggle/input-toggle.pug
   include ../../blocks/button/button.pug
   include ../../blocks/button-like/button-like.pug
+  include ../../blocks/rating/rating.pug
 
   include ../../blocks/list-bullet/list-bullet.pug
   include ../../blocks/list-checkbox/list-checkbox.pug
