--- a/source/pages/ui-kit/form-elements.scss
+++ b/source/pages/ui-kit/form-elements.scss
@@ -57,6 +57,11 @@
     margin-right: 10px;
   }
 
+  &__rate-button {
+    display: inline-block;
+    margin-right: 20px;
+  }
+
   &__button {
     height: 44px;
     margin-bottom: 30px;
