--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -16,6 +16,7 @@
 @import '../blocks/input-toggle/input-toggle';
 @import '../blocks/button/button';
 @import '../blocks/button-like/button-like';
+@import '../blocks/rating/rating';
 
 @import '../blocks/list-bullet/list-bullet';
 @import '../blocks/list-checkbox/list-checkbox';
