--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -13,8 +13,7 @@ block content
         .form-elements__text-field
           +input-field({labelText: "Text field"})(value="This is pretty awesome")
         .form-elements__text-field
-          //-Dropdown later
-          +input-field({labelText: "Dropdown", withExpand: true})(value="Сколько гостей")
+          +input-field({inpType: "mask-date", labelText: "Masked Text Field"})
 
     .form-elements__column.form-elements__column_shifted
       .form-elements__item
