Add subscription block

--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -14,6 +14,8 @@ block content
           +input-field({labelText: "Text field"})(value="This is pretty awesome")
         .form-elements__text-field
           +input-field({inpType: "mask-date", labelText: "Masked Text Field"})
+        .form-elements__text-field
+          +subscription({labelText: "Subscription Text Field"})
 
     .form-elements__column.form-elements__column_shifted
       .form-elements__item
