--- a/source/blocks/input-field/input-field.scss
+++ b/source/blocks/input-field/input-field.scss
@@ -9,7 +9,7 @@
 
   &__field {
     width: 100%;
-    height: 3.14rem;
+    height: 44px;
     padding: 0 1rem;
     background: $color_back;
     border: 1px solid $color_main-25;
