--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -5,6 +5,7 @@ block mixins
   include ../../blocks/input-checkbox/input-checkbox.pug
   include ../../blocks/input-radio/input-radio.pug
   include ../../blocks/input-toggle/input-toggle.pug
+  include ../../blocks/subscription/subscription.pug
   include ../../blocks/button/button.pug
   include ../../blocks/button-like/button-like.pug
   include ../../blocks/rating/rating.pug
