--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -14,6 +14,7 @@
 @import '../blocks/input-checkbox/input-checkbox';
 @import '../blocks/input-radio/input-radio';
 @import '../blocks/input-toggle/input-toggle';
+@import '../blocks/subscription/subscription';
 @import '../blocks/button/button';
 @import '../blocks/button-like/button-like';
 @import '../blocks/rating/rating';
