Add list-feature block
Also refactor list-bullet and list-checkbox blocks to improve code
consistency.

--- a/source/blocks/list-checkbox/list-checkbox.pug
+++ b/source/blocks/list-checkbox/list-checkbox.pug
@@ -15,5 +15,5 @@ mixin list-checkbox({listItems=[], listTitle="", expandable=false})
         i(class=`material-icons ${blockName}__icon`) expand_more
     ul(class=`${blockName}__list`)
       each item in listItems
-        li
+        li(class=`${blockName}__item`)
           +input-checkbox(item)
