--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -20,4 +20,5 @@
 @import '../blocks/rating/rating';
 
 @import '../blocks/list-bullet/list-bullet';
+@import '../blocks/list-feature/list-feature';
 @import '../blocks/list-checkbox/list-checkbox';
