--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -11,6 +11,7 @@ block mixins
   include ../../blocks/rating/rating.pug
 
   include ../../blocks/list-bullet/list-bullet.pug
+  include ../../blocks/list-feature/list-feature.pug
   include ../../blocks/list-checkbox/list-checkbox.pug
 
 doctype html
