--- a/source/styles/_variables.scss
+++ b/source/styles/_variables.scss
@@ -21,4 +21,5 @@ $color-grad_sec: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
 $color_main-75: rgba($color: $color_main, $alpha: 0.75);
 $color_main-50: rgba($color: $color_main, $alpha: 0.5);
 $color_main-25: rgba($color: $color_main, $alpha: 0.25);
+$color_main-10: rgba($color: $color_main, $alpha: 0.1);
 $color_main-5: rgba($color: $color_main, $alpha: 0.05);
