--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -135,3 +135,14 @@ block content
             {text: "Удобство", description: "Окно в каждой из спален"}
           ]
         })
+
+    .form-elements__column.form-elements__column_wide
+      .form-elements__item
+        +comment({
+          userName: "Мурад сарафанов",
+          userPicture: "comment__picture_male-1.png",
+          date: "5 дней назад",
+          likeCount: 12,
+          likeActive: true,
+          text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
+        })
