--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -9,7 +9,7 @@ block mixins
   include ../../blocks/button/button.pug
   include ../../blocks/button-like/button-like.pug
   include ../../blocks/rating/rating.pug
-
+  include ../../blocks/comment/comment.pug
   include ../../blocks/list-bullet/list-bullet.pug
   include ../../blocks/list-feature/list-feature.pug
   include ../../blocks/list-checkbox/list-checkbox.pug
