--- a/source/pages/ui-kit/form-elements.scss
+++ b/source/pages/ui-kit/form-elements.scss
@@ -7,7 +7,7 @@
   max-width: 1440px;
   max-height: 1853px;
   padding: 140px;
-  background: url('../img/ui-kit__logo.svg') no-repeat 30px 30px;
+  background: url('../pages/ui-kit/img/ui-kit__logo.svg') no-repeat 30px 30px;
   background-size: 48px 48px;
 
   &__column {
@@ -15,6 +15,10 @@
 
     &_shifted {
       margin-left: 50px;
+    }
+
+    &_wide {
+      width: 711px;
     }
   }
 
