--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -18,7 +18,7 @@
 @import '../blocks/button/button';
 @import '../blocks/button-like/button-like';
 @import '../blocks/rating/rating';
-
+@import '../blocks/comment/comment';
 @import '../blocks/list-bullet/list-bullet';
 @import '../blocks/list-feature/list-feature';
 @import '../blocks/list-checkbox/list-checkbox';
