--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -13,6 +13,7 @@ block mixins
   include ../../blocks/list-bullet/list-bullet.pug
   include ../../blocks/list-feature/list-feature.pug
   include ../../blocks/list-checkbox/list-checkbox.pug
+  include ../../blocks/pagination/pagination.pug
 
 doctype html
 html(lang="en")
