Refactor pagination block

--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -73,7 +73,8 @@ block content
 
       .form-elements__item
         h3.form-elements__title Pagination
-        +pagination({itemsNumber: 180, itemsPerPage: 12, baseHref: "#mock-address", addDescription: "вариантов аренды"})
+        .form-elements__pagination
+          +pagination({itemsNumber: 180, itemsPerPage: 12, baseHref: "#mock-address", addDescription: "вариантов аренды"})
 
     .form-elements__column
       .form-elements__item
